--- a/DistrubuteSystem/homework2/HttpClient/pom.xml
+++ b/DistrubuteSystem/homework2/HttpClient/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
     </dependencies>
 
 </project>
