--- a/DistrubuteSystem/homework2/HttpClient/pom.xml
+++ b/DistrubuteSystem/homework2/HttpClient/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>jsoup</artifactId>
             <version>1.15.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
