Update DistributeSystem Homework2
create connection graph

--- a/DistrubuteSystem/homework2/HttpClient/pom.xml
+++ b/DistrubuteSystem/homework2/HttpClient/pom.xml
@@ -48,6 +48,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>guru.nidi</groupId>
+            <artifactId>graphviz-java</artifactId>
+            <version>0.18.1</version>
+        </dependency>
     </dependencies>
 
 </project>
