Codeforces EDURound 169 AB

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,8 @@
 # test cpp file of windows
 ACM-ICPC-Practice/Codeforces/tempCodeRunnerFile.cpp
 
+# codeforces input file of mac
+ACM-ICPC/Codeforces/input.txt
+
 # mac tmp storage
 .DS_Store
